# taskvisor

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  Taskfile.yml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_request.md  feature_request.md
.github/actions/cache/: action.yml
.github/actions/cache-get/: action.yml
.github/actions/cache-put/: action.yml
.github/actions/cargo-cache/: action.yml
.github/actions/taskfile/: action.yml
.github/workflows/: .audit.yml  .build.yml  .checks.yml  .docs.yml  .label-check.yml  .preflight.yml  base_commit.yml  commit.yml  label.yml  manual.yml  pr.yml  release.yml
benches/: controller.rs  dynamic.rs  fanout.rs  lifecycle.rs  throughput.rs
examples/: admission.rs  basic.rs  basic_controller.rs  basic_one_shot.rs  control.rs  controller.rs  cpu_job.rs  custom_subscriber.rs  demo.rs  dynamic.rs  dynamic_add_remove.rs  metrics.rs  multiple.rs  outcomes.rs  periodic.rs  pipeline.rs  queue_consumer.rs  retry_with_backoff.rs  simple_pipeline.rs  slots.rs  subscriber.rs  task_cancel.rs  task_patterns.rs  tenant_sync.rs  tracing.rs  worker.rs
src/: ARCHITECTURE.md  actor.rs  alive.rs  bus.rs  config.rs  error.rs  event.rs  identity.rs  lib.rs  observer.rs  os_signals.rs  policy.rs  prelude.rs  reasons.rs  runner.rs  strategy.rs  supervisor.rs  task.rs  task_spec.rs
src/controller/: admission.rs  config.rs  core.rs  engine.rs  error.rs  inbox.rs  mod.rs  prepared.rs  runtime.rs  slot.rs  slots.rs  spec.rs  view.rs
src/controller/core/: admission.rs  handle.rs  identity.rs  introspect.rs  lifecycle.rs  mod.rs  protocol.rs  queue.rs  recovery.rs  shutdown.rs  task.rs  tests.rs  workers.rs
src/controller/task/: config.rs  mod.rs  worker.rs
src/core/: actor.rs  alive.rs  builder.rs  config.rs  handle.rs  mod.rs  outcome.rs  owner.rs  panic_guard.rs  registry.rs  runner.rs  runtime.rs  shutdown.rs  supervisor.rs  task_defaults.rs
src/core/registry/: admission.rs  completion.rs  listener.rs  protocol.rs  removal.rs  state.rs  tests.rs
src/core/runtime/: event_relay.rs  lifecycle.rs  management.rs  shutdown_workflow.rs  tests.rs
src/event/: bus.rs  mod.rs
src/events/: bus.rs  event.rs  mod.rs
src/observers/: alive.rs  log.rs  mod.rs  observer.rs
src/policies/: backoff.rs  jitter.rs  mod.rs  restart.rs
src/policy/: backoff.rs  base.rs  mod.rs
src/subscribers/: alive.rs  log.rs  mod.rs  set.rs  subscribe.rs  subscribe_set.rs  subscriber.rs  subscriber_set.rs
src/subscribers/embedded/: alive.rs  log.rs  mod.rs  tracing.rs
src/task/: mod.rs  spec.rs  task.rs
src/tasks/: context.rs  mod.rs  spec.rs  spec_builder.rs  task.rs  task_fn.rs
src/tasks/impl/: func.rs
tests/: concurrency.rs  controller.rs  defaults.rs  failure.rs  identity.rs  lifecycle.rs  ownership.rs  shutdown.rs  timeout.rs  watch.rs
tests/common/: mod.rs
