[package]
name = "taskvisor"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"

description = "Event-driven task orchestration with restart, backoff, and user-defined subscribers"
repository = "https://github.com/soltiHQ/taskvisor"
documentation = "https://docs.rs/taskvisor"
license = "Apache-2.0"
readme = "README.md"

keywords = ["async", "tasks", "supervisor", "backoff", "orchestration"]
categories = ["asynchronous", "concurrency", "network-programming"]

[features]
default = []
logging = []
controller = ["dashmap"]

[package.metadata.docs.rs]
features = ["logging", "controller"]

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7.16"
thiserror = "2.0.16"
fastrand = "2.3.0"
dashmap = { version = "6.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[example]]
name = "pipeline"
required-features = ["controller"]

[[bench]]
name = "lifecycle"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "fanout"
harness = false

[[bench]]
name = "dynamic"
harness = false

[[bench]]
name = "controller"
harness = false
required-features = ["controller"]
