[package]
name         = "taskvisor"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.90.0"

description   = "Event-driven task orchestration with restart, backoff, and user-defined subscribers"
repository    = "https://github.com/soltiHQ/taskvisor"
documentation = "https://docs.rs/taskvisor"
license       = "Apache-2.0"
readme        = "README.md"

keywords   = ["async", "tasks", "supervisor", "backoff", "orchestration"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

exclude = [
    ".env",
    ".github/",
    ".gitignore",
    "Taskfile.yml",
    "rust-toolchain.toml",
]

[features]
default = []
controller = ["dashmap"]
logging = []
tracing = ["dep:tracing"]
tokio-util-interop = []

[package.metadata.docs.rs]
features = ["logging", "tracing", "controller", "tokio-util-interop"]

[dependencies]
tokio      = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-util = "0.7.16"
thiserror  = "2.0.16"
fastrand   = "2.3.0"
dashmap    = { version = "6.1.0", optional = true }
tracing    = { version = "0.1.41", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }

[[example]]
name              = "pipeline"
required-features = ["controller"]

[[example]]
name              = "admission"
required-features = ["controller"]

[[bench]]
name    = "lifecycle"
harness = false

[[bench]]
name    = "throughput"
harness = false

[[bench]]
name    = "fanout"
harness = false

[[bench]]
name    = "dynamic"
harness = false

[[bench]]
name              = "controller"
harness           = false
required-features = ["controller"]

[[test]]
name              = "controller"
required-features = ["controller"]
